Создал application слой

--- a/src/DevQuestions.Presenters/DevQuestions.Presenters.csproj
+++ b/src/DevQuestions.Presenters/DevQuestions.Presenters.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\DevQuestions.Contracts\DevQuestions.Contracts.csproj" />
+      <ProjectReference Include="..\DevQuestions.Application\DevQuestions.Application.csproj" />
       <ProjectReference Include="..\DevQuestions.Domain\DevQuestions.Domain.csproj" />
     </ItemGroup>
 
